# Daylight-Savings-Survey-Sim

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
data/: acs_pums_sample_n100.csv  nyc_puma_crosswalk_2020.csv  persona_seed_dataset_n100.csv  personas_corpus_n100.json  phase1_model_sweep.csv  phase3_throughput.csv  phase4_topology.csv  phase5_drift.csv  phase5_persona_validation.csv  phase6_ablation.csv  phase6_calibration.csv  phase6_calibration_full.csv  phase6_calibration_sonnet.csv  phase6_conviction_flip_utterances.txt  phase6_conviction_flips.csv  phase6_conviction_trajectory.csv  phase6_deliberation.csv  phase6_dst_flip_trajectory.csv  phase6_flip_diagnostic.csv  phase6_flip_diagnostic.txt  phase6_opinion_baseline_trajectory.csv  phase6_opinion_experiments.csv  phase6_opinion_polar25_committed_trajectory.csv  phase6_opinion_polar25_conviction_trajectory.csv  phase6_opinion_polar25_seen_trajectory.csv  phase6_opinion_polar50_seen_trajectory.csv  phase6_opinion_random50_seen_trajectory.csv  phase6_persona_stances.csv  phase6_scale_sonnet_ring_survey.csv  phase6_scale_sonnet_ring_trajectory.csv  phase6_scale_sonnet_survey.csv  phase6_scale_sonnet_trajectory.csv  phase6_scale_survey.csv  phase6_scale_trajectory.csv  phase6_sonnet_stance_trajectory.csv
docs/: ARCHITECTURE.md  PHASE_PLAN.md  conventions.md  design_layers.md  implementation_rough_plan.md  project_brief.md  query_handbook.md  requirements_features.md  status.md
sandbox/: analyze_predictors.py  build_comparison.py  build_figures.py  build_sonnet_trajectory.py  build_tick0_yougov_sonnet.py  clean_x_data.py  label_tweet_stance.py  pipeline_trace_3personas.md  (+9 more)
(+116 files in other folders)
